add categories management features

--- a/package.json
+++ b/package.json
@@ -65,12 +65,21 @@
     "@adonisjs/shield": "^8.1.2",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/inter": "^5.2.5",
     "@inertiajs/react": "^2.0.5",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "@mui/x-data-grid": "^7.27.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@vinejs/vine": "^3.0.0",
     "edge.js": "^6.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "mongoose": "^8.12.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
